# autonomedia

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  FRAMEWORK.md  INDEX.md  PLAYBOOK.md  README.md  ROADMAP.md  RUNTIME.md  UPDATE_LOG.md  check_all_platforms.py  check_data.py  check_db.py  check_health.py  check_platforms.py  check_status.py  clear_content.py  db_migration.py  db_migration_m12.py  db_migration_settings.py  db_migration_v2.py  db_update.py  findings.md  journal.md  justfile  progress.md  pyproject.toml  pytest.ini  task_plan.md  update_platforms.py  verify_health.py
.grill/: dashboard-architecture.md
docs/: AI_FLOW.md  CHANGELOG.md  DATA.md  FRAMEWORK.md  PLAYBOOK.md  ROADMAP.md  RUNTIME.md  SPEC.md  STRUCTURE.md  WORKFLOW.md  autonomedia-db-content-1.csv  findings.md  revision-rules.md  roadmap_audit_temp.md  state.json
docs/archive/: FINDINGS_ARCHIVE.patch  M12.md  M13.md  M13S1.md  M13S1R.md  M13S1V.md  M13S2.md  M13S2R.md  M13S2V.md  M13S3.md  M13S3R.md  M13S3V.md  M13S4.md  M13S4R.md  M13S4V.md  M14.md  M8-M11-Archive.md  findings_M9.md  m2_technical_specifications.md
docs/milestones/: M12_AI_REWRITE.md  M12_FINDINGS_ARCHIVE.md  M2_Platform_Profiles_User_Selection.md  M3_Content_Drafting_Variation_Logic.md  M4_User_Approval_Immediate_Posting.md  M5B.md  M5C.md  M5X.md  M5_Advanced_Scheduling_Automated_Variations.md  M6_End_to_End_Stability_Multi_Platform.md  M8-UX-ARCHITECTURE.md
docs/reviews/: M14S1R.md
docs/skeletons/: autonomedia_skeleton.md  src_autonomedia_ai_moderation_adapter.py.md  src_autonomedia_ai_planner.py.md  src_autonomedia_ai_rewriting_base.py.md  src_autonomedia_ai_rewriting_gemini.py.md  src_autonomedia_apps_worker_posting_executor.py.md  src_autonomedia_browser_provider.py.md  src_autonomedia_content_transforms_entity_normalizer.py.md  src_autonomedia_core_config_settings.py.md  src_autonomedia_core_observability_monitor.py.md  src_autonomedia_core_observability_telegram.py.md  src_autonomedia_core_poller.py.md  src_autonomedia_core_posting_routine.py.md  src_autonomedia_core_utils_verification.py.md  src_autonomedia_core_worker.py.md  src_autonomedia_platforms_mastodon_selectors.py.md  src_autonomedia_platforms_mastodon_task_handler.py.md  src_database_client.py.md  src_database_schema.py.md  src_web_app.py.md
docs/specs/: M14S1.md
docs/verifications/: M14S1V.md
docs/workflows/: state.json
scripts/: clear_content.py  create_db.py  ingest_content.py  migrate_db.py  test_mastodon_compose.py  test_mastodon_post.py  test_mastodon_profile.py  update_platforms.py  verify_db.py  verify_telegram.py
scripts/checks/: check_all_platforms.py  check_data.py  check_db.py  check_health.py  check_platforms.py  check_status.py  debug_tables.py  verify_health.py  (+2 more)
tests/: conftest.py  run_scenarios.py  scenario01.md  simple_test.py  test_ai_analysis.py  test_ingestion.py  test_m12_migration.py  test_m12_verification.py  test_m13_backend.py  test_m13_migration.py  test_m13_s3_frontend_rows.py  test_m13_s4_verified_state.py  test_m14_routine.py  verification_protocol.md
(+95 files in other folders)
