[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomedia"
version = "0.1.0"
description = "Autonomous publishing runtime"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.47.0",
]

[tool.ruff]
# Ruff configuration for reliability and performance
line-length = 88
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "ASYNC",# flake8-async (critical for your runtime)
    "I",    # isort
    "UP",   # pyupgrade
    "T20",  # flake8-print
]

[tool.ruff.lint]
# Add flake8-async-specific ignores if needed
ignore = []

[tool.mypy]
# Mypy configuration for strict safety
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
